--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@types/react-datepicker": "^6.2.0",
+    "axios": "^1.8.4",
     "chart.js": "^4.4.9",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -24,6 +25,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
